BANNED_LETTERS as List.of()